CCDB-246: Fixed "copy into root" and some SonarQube issues.