@@ -83,7 +83,7 @@ public class DevicesDataLoader extends AbstractEntityWithPropertiesDataLoader<De
 
     @Override
     protected @Nullable Integer getUniqueColumnIndex() {
-        return new Integer(COL_INDEX_SERIAL);
+        return Integer.valueOf(COL_INDEX_SERIAL);
     }
 
     @Override
